# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "kicad_newstroke_font"
version = "0.1.0+6.0.0"
edition = "2021"

license-file = "LICENSE.txt"
description = "KiCAD v6 Newstroke Font (raw data)"
readme = "README.md"

repository = "https://github.com/kicad-rs/kicad_newstroke_font"
include = ["src/**/*", "README.md", "LICENSE.txt"]
